--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "uplim-kun",
   "packageManager": "yarn@4.1.0",
   "devDependencies": {
-    "@biomejs/biome": "1.5.3"
+    "@biomejs/biome": "1.5.3",
+    "@types/node": "20.11.19",
+    "ts-node": "10.9.2",
+    "typescript": "5.3.3"
+  },
+  "dependencies": {
+    "discord.js": "14.14.1"
   }
 }
