--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
 		"build": "tsc -p ."
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.5.3",
-		"@types/node": "20.11.25",
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "22.10.5",
 		"ts-node": "10.9.2",
-		"typescript": "5.4.2"
+		"typescript": "5.7.3"
 	},
 	"dependencies": {
-		"@notionhq/client": "2.2.14",
-		"discord.js": "14.14.1"
+		"discord.js": "14.17.3",
+		"googleapis": "144.0.0",
+		"xlsx": "0.18.5"
 	},
 	"engines": {
 		"node": "22.12.0"
