--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"scripts": {
 		"format": "biome format --write .",
 		"ci": "biome ci .",
-		"start": "node --env-file=.env dist/index.js",
+		"start": "node dist/index.js",
 		"build": "tsc -p ."
 	},
 	"devDependencies": {
