--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "uplim-kun",
 	"scripts": {
+		"deploy": "wrangler deploy",
+		"cf-typegen": "wrangler types",
 		"format": "biome format --write .",
 		"ci": "biome ci .",
 		"start": "node --env-file=.env dist/index.js",
@@ -8,16 +10,17 @@
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"@types/node": "22.10.5",
+		"@cloudflare/workers-types": "4.20250311.0",
+		"discord-api-types": "0.37.119",
 		"ts-node": "10.9.2",
-		"typescript": "5.7.3"
-	},
-	"dependencies": {
-		"discord.js": "14.17.3",
-		"googleapis": "144.0.0",
-		"xlsx": "0.18.5"
+		"typescript": "5.7.3",
+		"wrangler": "3.114.1"
 	},
 	"engines": {
 		"node": "22.12.0"
+	},
+	"dependencies": {
+		"cloudflare-workers-and-google-oauth": "2.0.0",
+		"discord-hono": "0.16.3"
 	}
 }
