--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"module": "CommonJS",
 		"target": "ESNext",
+		"types": ["@cloudflare/workers-types"],
 		"strict": true,
 		"strictNullChecks": true,
 		"resolveJsonModule": true,
@@ -18,6 +19,6 @@
 		"rootDir": "./src",
 		"outDir": "./dist"
 	},
-	"include": ["**/*.ts"],
+	"include": ["worker-configuration.d.ts", "src/**/*.ts"],
 	"exclude": ["node_modules", "dist"]
 }
