--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@biomejs/biome": "1.9.4",
 		"@cloudflare/workers-types": "4.20250311.0",
 		"discord-api-types": "0.37.119",
+		"googleapis": "146.0.0",
 		"ts-node": "10.9.2",
 		"typescript": "5.7.3",
 		"wrangler": "3.114.1"
