--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 		"cf-typegen": "wrangler types",
 		"format": "biome format --write .",
 		"ci": "biome ci .",
-		"start": "node --env-file=.env dist/index.js",
+		"register": "node --env-file=.env dist/register.js",
 		"build": "tsc -p ."
 	},
 	"devDependencies": {
